--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@react-navigation/stack": "^5.14.3",
     "react": "17.0.1",
     "react-native": "0.64.0",
+    "react-native-calendars": "^1.1255.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-reanimated": "^2.0.1",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^2.18.1",
+    "react-native-sound-player": "^0.10.7",
     "react-native-tab-view": "^2.16.0",
     "react-redux": "^7.2.3",
     "redux": "^4.0.5"
