--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-calendars": "^1.1255.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-paper": "^4.7.2",
     "react-native-reanimated": "^2.0.1",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^2.18.1",
