--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native": "0.64.0",
     "react-native-calendar-picker": "^7.1.1",
     "react-native-calendars": "^1.1255.0",
+    "react-native-fbsdk": "^3.0.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-paper": "^4.7.2",
