--- a/ios/DuLich_VanQuyTests/Info.plist
+++ b/ios/DuLich_VanQuyTests/Info.plist
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
+
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
@@ -20,5 +21,25 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>CFBundleURLTypes</key>
+		<array>
+			<dict>
+				<key>CFBundleURLSchemes</key>
+				<array>
+				<string>fb456503322104710</string>
+				</array>
+			</dict>
+			</array>
+				<key>FacebookAppID</key>
+				<string>456503322104710</string>
+				<key>FacebookDisplayName</key>
+				<string>Phạm Jin</string>
+				<key>LSApplicationQueriesSchemes</key>
+			<array>
+			<string>fbapi</string>
+			<string>fb-messenger-share-api</string>
+			<string>fbauth2</string>
+			<string>fbshareextension</string>
+		</array>
 </dict>
 </plist>
