--- a/android/build.gradle
+++ b/android/build.gradle
@@ -7,6 +7,7 @@ buildscript {
         compileSdkVersion = 29
         targetSdkVersion = 29
         ndkVersion = "20.1.5948944"
+        googlePlayServicesAuthVersion = "16.0.1"
     }
     repositories {
         google()
@@ -14,6 +15,7 @@ buildscript {
     }
     dependencies {
         classpath("com.android.tools.build:gradle:4.1.0")
+        classpath 'com.google.gms:google-services:4.1.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -29,10 +31,11 @@ allprojects {
         maven {
             // Android JSC is installed from npm
             url("$rootDir/../node_modules/jsc-android/dist")
+            
         }
 
         google()
         jcenter()
-        maven { url 'https://www.jitpack.io' }
+        maven { url "$rootDir/../node_modules/react-native/android"}
     }
 }
