--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/google-signin": "^5.0.0",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-google-signin/google-signin": "^6.0.0",
     "@react-navigation/bottom-tabs": "^5.11.8",
     "@react-navigation/material-top-tabs": "^5.3.15",
     "@react-navigation/native": "^5.9.3",
@@ -19,13 +21,16 @@
     "react-native": "0.64.0",
     "react-native-calendar-picker": "^7.1.1",
     "react-native-calendars": "^1.1255.0",
+    "react-native-draggable": "^3.3.0",
     "react-native-fbsdk": "^3.0.0",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-google-signin": "^2.1.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-paper": "^4.7.2",
     "react-native-reanimated": "^2.0.1",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^2.18.1",
+    "react-native-size-matters": "^0.4.0",
     "react-native-sound-player": "^0.10.7",
     "react-native-tab-view": "^2.16.0",
     "react-redux": "^7.2.3",
