--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "react-native-fbsdk": "^3.0.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-google-signin": "^2.1.1",
+    "react-native-image-crop-picker": "^0.36.1",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-modal": "^11.10.0",
     "react-native-paper": "^4.7.2",
     "react-native-reanimated": "^2.0.1",
     "react-native-safe-area-context": "^3.2.0",
