Pham Jin up code

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -33,13 +33,13 @@ allprojects {
             url("$rootDir/../node_modules/jsc-android/dist")
             
         }
-        // ADD THIS
-      maven { url 'https://maven.google.com' }
+    //     // ADD THIS
+    //   maven { url 'https://maven.google.com' }
 
-      // ADD THIS
-      maven { url "https://www.jitpack.io" }
-        google()
-        jcenter()
-        maven { url "$rootDir/../node_modules/react-native/android"}
+    //   // ADD THIS
+    //   maven { url "https://www.jitpack.io" }
+    //     google()
+    //     jcenter()
+    //     maven { url "$rootDir/../node_modules/react-native/android"}
     }
 }
